[gd_scene load_steps=4 format=2]

[ext_resource path="res://import/img-placeholders/cicle.png" type="Texture" id=1]
[ext_resource path="res://src/GasCloud.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="GasCloud" type="Area2D"]
z_index = -100
space_override = 3
linear_damp = 100.0
angular_damp = 0.0
collision_layer = 16
collision_mask = 5
script = ExtResource( 2 )
density = 100

[node name="gas_sprite" type="Sprite" parent="."]
scale = Vector2( 0.00368683, 0.00368683 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.21 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_GasCloud_entered"]
[connection signal="body_exited" from="." to="." method="_on_GasCloud_exited"]
